--- a/css/project.css
+++ b/css/project.css
@@ -139,7 +139,18 @@ div, section, main, header, footer, nav { max-width: 100vw; }
 }
 
 /* Utility for images */
-.img-fill { width: 100%; height: 100%; object-fit: cover; display: block; }
+.img-fill {
+  width: 100%;
+  height: auto;
+  display: block;
+}
+
+.full-width-image iframe {
+  width: 100%;
+  height: 55vw; /* adjust height to match your style */
+  display: block;
+  border: none;
+}
 
 /* PROJECT DETAILS */
 .project-details {
